# WannaCriPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
apps/: usmtool.cpp
include/usm/: bytes.hpp  chunk.hpp  io.hpp  media.hpp  page.hpp  tools.hpp  types.hpp  usm.hpp
include/usm/codecs/: h264.hpp  hca.hpp  ivf_vp9.hpp
src/: chunk.cpp  page.cpp  tools.cpp  usm.cpp
